# forward-pass-CoT

./: .gitignore  .gitmodules  2hop-3hop.txt  README.md  ez.py  lib.py  notebook.ipynb  pyproject.toml
