[project]
name = "forward-pass-cot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9",
    "transformers>=4.57",
    "scikit-learn>=1.8",
    "matplotlib>=3.10",
    "tqdm>=4.67",
    "numpy>=2.2",
    "ipykernel>=7.2.0",
    "pandas>=3.0.0",
    "jaxtyping>=0.3.7",
    "seaborn>=0.13.2",
]
